add the search,update,delete functions

--- a/Customer Management FrontEnd/index.html
+++ b/Customer Management FrontEnd/index.html
@@ -54,12 +54,14 @@
                         <th>Name</th>
                         <th>Address</th>
                         <th>Salary</th>
+                        <th>Action</th>
                     </tr>
                 </thead>
                 <tbody id="customerTableBody">
                     <!-- Table data will be populated here -->
                 </tbody>
             </table>
+            <button type="button" onclick="reloadTable()" style="background-color: #6c757d; margin-left: 40rem; margin-top: 0.5rem; padding: 0.5rem;">Reload Table</button>
         </div>
     </div>
 
